--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "@cloudinary/url-gen": "^1.8.6",
-    "@cloudinary/vue": "^1.8.0",
+    "@cloudinary/url-gen": "1.8.7",
+    "@cloudinary/vue": "1.9.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.6"
   },
